@@ -142,8 +142,8 @@ public class Hfs extends Tap
     super( new SequenceFile( fields ), sinkMode );
     setStringPath( stringPath );
 
-    if( sinkMode == SinkMode.APPEND )
-      throw new IllegalArgumentException( "appends are not supported" );
+    if( sinkMode == SinkMode.UPDATE )
+      throw new IllegalArgumentException( "updates are not supported" );
     }
 
   /**
