@@ -21,10 +21,6 @@
 
 package cascading.tap;
 
-import java.io.IOException;
-import java.io.Serializable;
-import java.util.Set;
-
 import cascading.flow.Flow;
 import cascading.flow.FlowElement;
 import cascading.flow.FlowException;
@@ -33,12 +29,16 @@ import cascading.pipe.Pipe;
 import cascading.scheme.Scheme;
 import cascading.tuple.Fields;
 import cascading.tuple.Tuple;
-import cascading.tuple.TupleEntryCollector;
 import cascading.tuple.TupleEntry;
+import cascading.tuple.TupleEntryCollector;
 import cascading.tuple.TupleEntryIterator;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.OutputCollector;
+
+import java.io.IOException;
+import java.io.Serializable;
+import java.util.Set;
 
 /**
  * A Tap represents the physical data source or sink in a connected {@link Flow}.
@@ -373,9 +373,21 @@ public abstract class Tap implements FlowElement, Serializable
    *
    * @return boolean
    */
+  @Deprecated
   public boolean isAppend()
     {
     return sinkMode == SinkMode.APPEND;
+    }
+
+  /**
+   * Method isUpdate indicates whether the resrouce represented by this instance should be updated if it already
+   * exists. Otherwise a new resource will be created when the Flow is started..
+   *
+   * @return boolean
+   */
+  public boolean isUpdate()
+    {
+    return isAppend() || sinkMode == SinkMode.UPDATE;
     }
 
   /**
